Fixed some responsive issues on mobile
No more grid on mobile.

--- a/themes/frdh/assets/css/base.css
+++ b/themes/frdh/assets/css/base.css
@@ -36,6 +36,9 @@ html {
     }
 }
 
+* {
+    box-sizing: border-box;
+}
 
 .h2 {
     font-family: 'Rockeby-condensed-bold';
