--- a/themes/frdh/assets/css/layouts/article/article.css
+++ b/themes/frdh/assets/css/layouts/article/article.css
@@ -1,26 +1,20 @@
 .page-article {
-    margin-top: 10vw;
-    display: grid;
-    grid-column-gap: 4em;
-    grid-template-columns: 25% auto;
-    grid-template-rows: 1fr auto;
-    grid-template-areas: 
-        ". article-head"
-        "sidebar article-content";
-}
+        margin-top: 10vw;
+    }
 
-@media only screen and (max-width: 900px) {
-    .page-article {
-        grid-template-columns: 1fr;
-        grid-template-rows: auto;
-        grid-template-areas:
-            "sidebar"
-            "article-head"
-            "article-content";
+@media only screen and (min-width: 900px) {
+   .page-article {
+        display: grid;
+        grid-column-gap: 4em;
+        grid-template-columns: 25% auto;
+        grid-template-rows: 1fr auto;
+        grid-template-areas: 
+            ". article-head"
+            "sidebar article-content";
     }
 
     .sub-navigation {
-        margin-bottom: 4em;
+        margin-bottom: 0;
     }
 }
 
@@ -32,4 +26,5 @@
 }
 .sub-navigation {
     grid-area: sidebar;
+    margin-bottom: 4em;
 }
